--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "next": "9.0.7",
+    "next-images": "^1.2.0",
     "node-sass": "^4.12.0",
     "react": "16.10.1",
     "react-dom": "16.10.1"
