--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "node-sass": "^4.12.0",
     "react": "16.10.1",
     "react-bootstrap": "^1.0.0-beta.12",
-    "react-dom": "16.10.1"
+    "react-dom": "16.10.1",
+    "react-swipe": "^6.0.4",
+    "swipe-js-iso": "^2.1.5"
   }
 }
