add additional info

--- a/src/config/projects.json
+++ b/src/config/projects.json
@@ -1,5 +1,6 @@
 [
     {
+        "additionalInfo": "<div>Email и пароль для входа как админ\n<b>Email - admin@admin.com\nпароль - 123123\n</b></div>",
         "features": [
             {
                 "descriptionList": [
