fix project description

--- a/src/config/projects.json
+++ b/src/config/projects.json
@@ -57,6 +57,7 @@
                 "descriptionList": [
                     "выполнен с использованием handlebars, less, swiper",
                     "возможно интегрировать с любым бэкендом за счет использования handlebars",
+                    "мобильное меню на чистом js на основе классов и событий",
                     "адаптивная верстка",
                     "кастомная сборка webpack"
                 ],
