--- a/src/config/projects.json
+++ b/src/config/projects.json
@@ -68,25 +68,25 @@
         "features": [
             {
                 "descriptionList": [
-                    "выполнен с использованием handlebars, less, swiper",
-                    "возможно интегрировать с любым бэкендом за счет использования handlebars",
-                    "мобильное меню на чистом js на основе классов и событий",
-                    "адаптивная верстка",
-                    "кастомная сборка webpack"
+                    "projects.takeoff.features.client.value1",
+                    "projects.takeoff.features.client.value2",
+                    "projects.takeoff.features.client.value3",
+                    "projects.takeoff.features.client.value4",
+                    "projects.takeoff.features.client.value5"
                 ],
-                "title": "Client"
+                "title": "projects.takeoff.features.client.title"
             },
             {
                 "descriptionList": [
-                    "выполнен с использованием node, express"
+                    "projects.takeoff.features.server.value1"
                 ],
-                "title": "Server"
+                "title": "projects.takeoff.features.server.title"
             }
         ],
         "git": "https://github.com/Yaolegol/TAKEOFF",
         "header": {
-            "description": "(landing page)",
-            "title": "takeoff"
+            "description": "projects.takeoff.description",
+            "title": "projects.takeoff.title"
         },
         "image": {
             "alt": "Takeoff",
@@ -98,23 +98,23 @@
         "features": [
             {
                 "descriptionList": [
-                    "выполнен с использованием react, less, swiper",
-                    "адаптивная верстка",
-                    "возможность выбора языка (en/ru)"
+                    "projects.portfolio.features.client.value1",
+                    "projects.portfolio.features.client.value2",
+                    "projects.portfolio.features.client.value3"
                 ],
-                "title": "Client"
+                "title": "projects.portfolio.features.client.title"
             },
             {
                 "descriptionList": [
-                    "выполнен с использованием node, express"
+                    "projects.portfolio.features.client.value1"
                 ],
-                "title": "Server"
+                "title": "projects.portfolio.features.server.title"
             }
         ],
         "git": "https://github.com/Yaolegol/portfolio",
         "header": {
-            "description": "(текущий сайт)",
-            "title": "portfolio"
+            "description": "projects.portfolio.description",
+            "title": "projects.portfolio.title"
         },
         "image": {
             "alt": "Cats",
