--- a/src/config/projects.json
+++ b/src/config/projects.json
@@ -71,7 +71,8 @@
                     "projects.takeoff.features.client.value2",
                     "projects.takeoff.features.client.value3",
                     "projects.takeoff.features.client.value4",
-                    "projects.takeoff.features.client.value5"
+                    "projects.takeoff.features.client.value5",
+                    "projects.takeoff.features.client.value6"
                 ],
                 "title": "projects.takeoff.features.client.title"
             },
