separate package.json for server and client

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "express": "^4.17.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-intl": "^5.10.6",
@@ -65,10 +64,10 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
-  "homepage": "https://github.com/Yaolegol/Portfolio#readme",
+  "homepage": "https://github.com/Yaolegol/Portfolio",
   "license": "ISC",
   "name": "portfolio",
-  "main": "index.js",
+  "main": "./src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Yaolegol/Portfolio.git"
@@ -76,9 +75,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "flow": "flow",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm run build",
-    "server": "nodemon ./server/index.js",
-    "server:prod": "./server/index.js",
+    "heroku-prebuild": "cd ./server && npm i",
     "start": "webpack-dev-server",
     "style:lint": "npx stylelint **/*.less",
     "test": "echo \"Error: no test specified\" && exit 1"
