add engines for package.json

--- a/package.json
+++ b/package.json
@@ -64,6 +64,10 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.5.0"
+  },
   "homepage": "https://github.com/Yaolegol/Portfolio",
   "license": "ISC",
   "name": "portfolio",
