--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,10 @@
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.5.0"
+  },
   "homepage": "https://github.com/Yaolegol/Portfolio",
   "license": "ISC",
   "name": "portfolio",
