--- a/.flowconfig
+++ b/.flowconfig
@@ -16,8 +16,9 @@ module.name_mapper='app' -> '<PROJECT_ROOT>/src/app'
 module.name_mapper='common' -> '<PROJECT_ROOT>/src/common'
 module.name_mapper='config' -> '<PROJECT_ROOT>/src/config'
 module.name_mapper='images' -> '<PROJECT_ROOT>/src/images'
+module.name_mapper='main' -> '<PROJECT_ROOT>/src/main'
 module.name_mapper='modules' -> '<PROJECT_ROOT>/src/modules'
-module.name_mapper='pages' -> '<PROJECT_ROOT>/src/pages'
 module.name_mapper='styles' -> '<PROJECT_ROOT>/src/styles'
+types_first=false
 
 [strict]
