--- a/.flowconfig
+++ b/.flowconfig
@@ -15,6 +15,7 @@ module.file_ext=.less
 module.name_mapper='app' -> '<PROJECT_ROOT>/src/app'
 module.name_mapper='common' -> '<PROJECT_ROOT>/src/common'
 module.name_mapper='config' -> '<PROJECT_ROOT>/src/config'
+module.name_mapper='icons' -> '<PROJECT_ROOT>/src/icons'
 module.name_mapper='images' -> '<PROJECT_ROOT>/src/images'
 module.name_mapper='main' -> '<PROJECT_ROOT>/src/main'
 module.name_mapper='modules' -> '<PROJECT_ROOT>/src/modules'
