--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "style-loader": "^2.0.0",
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
+    "svg-sprite-loader": "^6.0.11",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
@@ -75,6 +76,7 @@
   },
   "scripts": {
     "build": "webpack --mode production",
+    "build:dev": "webpack --mode development",
     "flow": "flow",
     "start": "webpack-dev-server",
     "style:lint": "npx stylelint **/*.less",
