--- a/.flowconfig
+++ b/.flowconfig
@@ -14,7 +14,7 @@ module.file_ext=.json
 module.file_ext=.less
 module.name_mapper='app' -> '<PROJECT_ROOT>/src/app'
 module.name_mapper='common' -> '<PROJECT_ROOT>/src/common'
-module.name_mapper='config' -> '<PROJECT_ROOT>/src/config'
+module.name_mapper='data' -> '<PROJECT_ROOT>/src/data'
 module.name_mapper='icons' -> '<PROJECT_ROOT>/src/icons'
 module.name_mapper='images' -> '<PROJECT_ROOT>/src/images'
 module.name_mapper='main' -> '<PROJECT_ROOT>/src/main'
