--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -106,7 +106,7 @@
             },
             {
                 "descriptionList": [
-                    "projects.portfolio.features.client.value1"
+                    "projects.portfolio.features.server.value1"
                 ],
                 "title": "projects.portfolio.features.server.title"
             }
