--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^7.2.2",
     "react-select": "^3.1.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "swiper": "^6.3.5"
   },
   "description": "",
